--- a/web-server/Templates/views/about.hbs
+++ b/web-server/Templates/views/about.hbs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>About</title>
 </head>
-
 <body>
-    <h1>Help Page</h1>
+    {{>header}}
+    <img src="./assets/me.jpg" alt="" srcset="">
 </body>
-
 </html>
