--- a/web-server/Templates/views/help.html
+++ b/web-server/Templates/views/help.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Help</title>
     <link rel="stylesheet" href="./css/styles.css">
-
 </head>
 
 <body>
-    <h1>About Page</h1>
-    <img src="./assets/me.jpg" alt="My picture">
+    {{>header}}
 </body>
 
 </html>
