--- a/web-server/Templates/partials/header.hbs
+++ b/web-server/Templates/partials/header.hbs
@@ -1,1 +1,9 @@
 <h1>{{title}}</h1>
+
+<nav>
+    <div>
+        <a href="/">Home</a>
+        <a href="/about">about</a>
+        <a href="/help">Help </a>
+    </div>
+</nav>
