--- a/web-server/Templates/views/error.hbs
+++ b/web-server/Templates/views/error.hbs
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title>About</title>
+    <title>Error</title>
 </head>
 <body>
     {{>header}}
-    <img src="./assets/me.jpg" alt="" srcset="">
+    {{errorMes}}
     {{>footer}}
 </body>
 </html>
