--- a/web-server/Templates/views/index.hbs
+++ b/web-server/Templates/views/index.hbs
@@ -13,7 +13,7 @@
     <h1>Weather-forecast</h1>
     <footer>My Weather-App</footer>
     <script src="./js/app.js"></script>
-    <footer>Created by {{name}}</footer>
+    {{>footer}}
 </body>
 
 </html>
