--- a/web-server/Templates/views/error.hbs
+++ b/web-server/Templates/views/error.hbs
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
 </head>
+
 <body>
-    {{>header}}
-    {{errorMes}}
+    <div clsss="main-body">
+        {{>header}}
+    </div>
     {{>footer}}
 </body>
+
 </html>
