--- a/web-server/Templates/views/index.hbs
+++ b/web-server/Templates/views/index.hbs
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-    {{>header}}
-    <h1>Weather-forecast</h1>
-    <footer>My Weather-App</footer>
-    <script src="./js/app.js"></script>
+    <div class="main-body">
+        {{>header}}
+    </div>
     {{>footer}}
 </body>
 
