--- a/web-server/Templates/partials/header.hbs
+++ b/web-server/Templates/partials/header.hbs
@@ -1,9 +1,8 @@
-<h1>{{title}}</h1>
-
-<nav>
-    <div>
+<header>
+    <nav>
+        <h1>{{title}}</h1>
         <a href="/">Home</a>
         <a href="/about">about</a>
         <a href="/help">Help </a>
-    </div>
-</nav>
+    </nav>
+</header>
