--- a/web-server/Templates/views/about.hbs
+++ b/web-server/Templates/views/about.hbs
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>About</title>
 </head>
+
 <body>
-    {{>header}}
-    <img src="./assets/me.jpg" alt="" srcset="">
-    {{>footer}}
+    <div class="main-body">
+        {{>header}}
+        <img src="./assets/me.jpg" alt="" srcset="">
+        {{>footer}}
+    </div>
 </body>
+
 </html>
