--- a/web-server/Templates/partials/header.hbs
+++ b/web-server/Templates/partials/header.hbs
@@ -2,7 +2,7 @@
     <nav>
         <h1>{{title}}</h1>
         <a href="/">Home</a>
-        <a href="/about">about</a>
+        <a href="/about">About</a>
         <a href="/help">Help </a>
     </nav>
 </header>
