--- a/web-server/Templates/views/index.hbs
+++ b/web-server/Templates/views/index.hbs
@@ -11,6 +11,8 @@
 <body>
     <div class="main-body">
         {{>header}}
+        <input type="text" placeholder="Address">
+        <button type="submit">Submit</button>
     </div>
     {{>footer}}
 </body>
