--- a/web-server/Templates/views/index.hbs
+++ b/web-server/Templates/views/index.hbs
@@ -11,10 +11,13 @@
 <body>
     <div class="main-body">
         {{>header}}
-        <input type="text" placeholder="Address">
-        <button type="submit">Submit</button>
+        <form>
+            <input type="text" placeholder="Address">
+            <button type="submit">Submit</button>
+        </form>
     </div>
     {{>footer}}
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
