--- a/web-server/Templates/views/index.hbs
+++ b/web-server/Templates/views/index.hbs
@@ -11,13 +11,13 @@
 <body>
     <div class="main-body">
         {{>header}}
+        <p>Use this to check weather at your place.</p>
         <form>
             <input type="text" placeholder="Address">
             <button type="submit">Submit</button>
         </form>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p class="location"></p>
+        <p class="weather"></p>
     </div>
     {{>footer}}
     <script src="./js/app.js"></script>
