--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -49,4 +49,46 @@ footer {
 .main-body input {
 	display: inline-block;
 	margin: 30px 20px;
+	color:green;
+	font-size:20px;
+
+}
+.main-body button {
+	box-shadow: 0px 10px 14px -7px #276873;
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
+}
+.main-body button:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	background-color:#408c99;
+}
+.main-body button:active {
+	position:relative;
+	top:1px;
+}
+
+p{
+	font-family: ariel;
+	font-size: 17px;
+	color: purple;
+}
+
+.location{
+	font-size: 20px;
+	border-bottom: 0.1px solid grey;
+	color: black;
+}
+
+.weather{
+	font-size: 25px;
 }
